# retrylib

./: .travis.yml  AUTHORS  MANIFEST  MANIFEST.in  README.md  README.rst  project.config  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
retrylib/: __init__.py  decorators.py  defaults.py  network.py
retrylib.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt  top_level.txt
retrylib/tests/: base.py  test_decorators.py  test_network.py
