[metadata]
name = retrylib
summary = Retries library
description-file =
    README.rst
author = Sergey Bunatyan
author-email = sergey.bunatyan@gmail.com
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
[files]
packages =
    retries
    retries.tests

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
